<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="15dp"
        android:id="@+id/lblNombre"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="Ingresa el Nombre"
        android:inputType="text"
        android:id="@+id/txtNombre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNombre"
        android:text="Correo:"
        android:textSize="15dp"
        android:id="@+id/lblCorreo"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="Ingresa el Correo"
        android:inputType="text"
        android:id="@+id/txtCorreo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Teléfono:"
            android:textSize="15dp"
            android:id="@+id/lblTelefono"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblTelefono"
            android:layout_margin="15dp"
            android:hint="Ingresa el Teléfono"
            android:inputType="text"
            android:id="@+id/txtTelefono" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTelefono">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:id="@+id/botonGuardar"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpiar"
            android:id="@+id/botonLimpiar"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listar"
            android:id="@+id/botonContactos"/>
    </LinearLayout>
</TableLayout>
